@@ -1,3 +1,10 @@
+Sun Jan  4 03:55:27 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/Service_Gestalt.cpp (process_directives): Ensure that the
+          number of failed services is returned.  Thanks to Milan
+          Cvetkovic <milan dot cvetkovic at mpathix dot com> for
+          contributing this.
+
 Fri Jan  2 15:38:31 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * include/makeinclude/platform_sunos5_g++.GNU:
